# flask-cctv-stream

./: README.md  main.py  pyproject.toml
.github/workflows/: publish.yml
src/flask_cctv_stream/: __main__.py
src/flask_cctv_stream/templates/: index.html
